crates/solidity/testing/snapshots/bindings_output/enums/sample/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected CloseBrace or OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[input.sol:17:5]
    │
 17 │ ╭─▶     function getChoice() public view returns (ActionChoices) {
    ┆ ┆   
 31 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  4 │ contract Test {
    │          ──┬─  
    │            ╰─── def: 1
  5 │     enum ActionChoices { GoLeft, GoRight, GoStraight, SitStill }
    │          ──────┬──────   ───┬──  ───┬───  ─────┬────  ────┬───  
    │                ╰──────────────────────────────────────────────── def: 2
    │                             │       │          │          │     
    │                             ╰─────────────────────────────────── def: 3
    │                                     │          │          │     
    │                                     ╰─────────────────────────── def: 4
    │                                                │          │     
    │                                                ╰──────────────── def: 5
    │                                                           │     
    │                                                           ╰───── def: 6
    │ 
  7 │     ActionChoices choice;
    │     ──────┬────── ───┬──  
    │           ╰─────────────── ref: 2
    │                      │    
    │                      ╰──── def: 7
  8 │     ActionChoices constant defaultChoice = ActionChoices.GoStraight;
    │     ──────┬──────          ──────┬──────   ──────┬────── ─────┬────  
    │           ╰────────────────────────────────────────────────────────── ref: 2
    │                                  │               │            │      
    │                                  ╰─────────────────────────────────── def: 8
    │                                                  │            │      
    │                                                  ╰─────────────────── ref: 2
    │                                                               │      
    │                                                               ╰────── ref: 5
    │ 
 10 │     function setGoStraight() public {
    │              ──────┬──────  
    │                    ╰──────── def: 9
 11 │         choice = ActionChoices.GoStraight;
    │         ───┬──   ──────┬────── ─────┬────  
    │            ╰─────────────────────────────── ref: 7
    │                        │            │      
    │                        ╰─────────────────── ref: 2
    │                                     │      
    │                                     ╰────── ref: 5
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  3 │ ╭─────▶ 
    ┆ ┆       
  5 │ │   │       enum ActionChoices { GoLeft, GoRight, GoStraight, SitStill }
    │ │   │   ────────────────────────────┬───┬───┬──────────┬──────────┬──────  
    │ │   │                               ╰────────────────────────────────────── definiens: 3
    │ │   │                                   │   │          │          │        
    │ │   │                                   ╰────────────────────────────────── definiens: 2
    │ │   │                                       │          │          │        
    │ │   │                                       ╰────────────────────────────── definiens: 4
    │ │   │                                                  │          │        
    │ │   │                                                  ╰─────────────────── definiens: 5
    │ │   │                                                             │        
    │ │   │                                                             ╰──────── definiens: 6
  6 │ │   ╭─▶ 
  7 │ │   ├─▶     ActionChoices choice;
    │ │   │                               
    │ │   ╰─────────────────────────────── definiens: 7
  8 │ │ │         ActionChoices constant defaultChoice = ActionChoices.GoStraight;
    │ │ │     ──────────────────────────────────┬──────────────────────────────────  
    │ │ │                                       ╰──────────────────────────────────── definiens: 8
  9 │ │ ╭───▶ 
    ┆ ┆ ┆     
 12 │ │ ├───▶     }
    │ │ │             
    │ │ ╰───────────── definiens: 9
    ┆ ┆       
 32 │ ├─────▶ }
    │ │           
    │ ╰─────────── definiens: 1
────╯
